--- a/app/src/main/res/layout/fragment_road.xml
+++ b/app/src/main/res/layout/fragment_road.xml
@@ -37,145 +37,144 @@
         android:textStyle="bold"
         android:typeface="sans" />
 
-    <Button
-        android:id="@+id/buttonRoad"
-        android:layout_width="115dp"
-        android:layout_height="102dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="85dp"
-        android:layout_marginEnd="-13dp"
-        android:layout_toStartOf="@+id/txtTitle"
-        android:background="@drawable/pothole"
-        android:gravity="bottom|center"
-        android:text="Potholes"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="159dp"
-        android:layout_height="100dp"
-        android:layout_alignStart="@+id/txtTitle"
-        android:layout_alignTop="@+id/buttonRoad"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="2dp"
-        android:background="@drawable/obstruction"
-        android:gravity="bottom|center"
-        android:text="Obstruction"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/button13"
-        android:layout_width="106dp"
-        android:layout_height="106dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="333dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginRight="140dp"
-        android:background="@drawable/snowplow"
-        android:gravity="bottom|center"
-        android:text="Snow"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/button11"
-        android:layout_width="86dp"
-        android:layout_height="106dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="137dp"
-        android:layout_marginLeft="137dp"
-        android:layout_marginTop="81dp"
-        android:background="@drawable/streetsign"
-        android:gravity="bottom|center"
-
-        android:text="Signs"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/button12"
-        android:layout_width="133dp"
-        android:layout_height="109dp"
-        android:layout_alignStart="@+id/button10"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="-99dp"
-        android:layout_marginTop="208dp"
-        android:background="@drawable/crosswalk"
-        android:gravity="bottom|center"
-        android:text="crosswalk"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="110dp"
-        android:layout_height="103dp"
-        android:layout_alignBottom="@+id/button12"
-        android:layout_marginStart="1dp"
-        android:layout_marginBottom="0dp"
-        android:layout_toEndOf="@+id/txtTitle"
-        android:background="@drawable/bikelane"
-        android:gravity="bottom|center"
-        android:text="Bike Lane"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/button14"
-        android:layout_width="73dp"
-        android:layout_height="93dp"
-        android:layout_alignEnd="@+id/buttonRoad"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="-220dp"
-        android:layout_marginBottom="72dp"
-        android:background="@drawable/other"
-        android:gravity="bottom|center"
-        android:text="Other"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/button15"
-        android:layout_width="75dp"
-        android:layout_height="94dp"
-        android:layout_alignEnd="@+id/buttonCancel"
-        android:layout_alignBottom="@+id/button13"
-        android:layout_marginEnd="120dp"
-        android:layout_marginBottom="-2dp"
-        android:background="@drawable/streetlight"
-        android:gravity="bottom|center"
-        android:text="Light"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/button16"
-        android:layout_width="86dp"
-        android:layout_height="91dp"
+    <android.support.v7.widget.GridLayout
+        android:layout_width="362dp"
+        android:layout_height="386dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="228dp"
-        android:background="@drawable/trafficlight"
-        android:gravity="bottom|center"
-        android:text="Signal"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="84dp"
+        android:padding="2dp">
+
+        <Button
+            android:id="@+id/buttonRoad"
+            android:layout_width="111dp"
+            android:layout_height="114dp"
+            android:background="@drawable/pothole"
+            android:gravity="bottom|center"
+            android:text="Potholes"
+            android:textColor="@color/colorAccent"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_column="0"
+            app:layout_gravity="center"
+            app:layout_row="0" />
+
+        <Button
+            android:id="@+id/button10"
+            android:layout_width="151dp"
+            android:layout_height="111dp"
+            android:background="@drawable/obstruction"
+            android:gravity="bottom|center"
+            android:text="Obstruction"
+            android:textColor="@color/colorAccent"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_column="2"
+            app:layout_gravity="center"
+            app:layout_row="0" />
+
+        <Button
+            android:id="@+id/button13"
+            android:layout_width="95dp"
+            android:layout_height="107dp"
+            android:background="@drawable/snowplow"
+            android:gravity="bottom|center"
+            android:text="Snow"
+            android:textColor="@color/colorAccent"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_column="0"
+            app:layout_gravity="center"
+            app:layout_row="2" />
+
+        <Button
+            android:id="@+id/button11"
+            android:layout_width="64dp"
+            android:layout_height="114dp"
+            android:background="@drawable/streetsign"
+            android:gravity="bottom|center"
+            android:text="Signs"
+            android:textColor="@color/colorAccent"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_column="1"
+            app:layout_gravity="center"
+            app:layout_row="0" />
+
+        <Button
+            android:id="@+id/button12"
+            android:layout_width="150dp"
+            android:layout_height="123dp"
+            android:background="@drawable/crosswalk"
+            android:gravity="bottom|center"
+            android:text="crosswalk"
+            android:textColor="@color/colorAccent"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_column="2"
+            app:layout_row="1" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="110dp"
+            android:layout_height="125dp"
+            android:background="@drawable/bikelane"
+            android:gravity="bottom|center"
+            android:text="Bike Lane"
+            android:textColor="@color/colorAccent"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_column="0"
+            app:layout_gravity="center"
+            app:layout_row="1" />
+
+        <Button
+            android:id="@+id/button14"
+            android:layout_width="85dp"
+            android:layout_height="104dp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/other"
+            android:gravity="bottom|center"
+            android:text="Other"
+            android:textColor="@color/colorAccent"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_column="2"
+            app:layout_gravity="center"
+            app:layout_row="2" />
+
+        <Button
+            android:id="@+id/button15"
+            android:layout_width="88dp"
+            android:layout_height="119dp"
+            android:background="@drawable/streetlight"
+            android:gravity="bottom|center"
+            android:text="Light"
+            android:textColor="@color/colorAccent"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_column="1"
+            app:layout_gravity="center"
+            app:layout_row="1" />
+
+        <Button
+            android:id="@+id/button16"
+            android:layout_width="91dp"
+            android:layout_height="108dp"
+            android:background="@drawable/trafficlight"
+            android:gravity="bottom|center"
+            android:text="Signal"
+            android:textColor="@color/colorAccent"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_column="1"
+            app:layout_gravity="center"
+            app:layout_row="2" />
+
+    </android.support.v7.widget.GridLayout>
+
 
 
 </RelativeLayout>
